--- a/css/main.css
+++ b/css/main.css
@@ -97,33 +97,48 @@ textarea {
 
 
 html {
-  background-color: #fff;
+  background-color: #171C1F;
   height: 100%;
 }
 
 body {
   font-family: 'Source Sans Pro', sans-serif;
   padding: 2em;
-  font-size: 1.25em;
+  font-size: 1em;
   height: 100%;
+  background: url(../img/country-road.jpg) center no-repeat;
 }
 
+header {
+    font-size: 1.5em;
+    /*** font-family removed***/
+    color: white;
+    display: flex;
+    justify-content: left;
+    background-color: #384c5c;
+    margin-bottom: 2em;
+    margin-top: 2em;
+    padding-left: 1em;
+}
 .wrapper {
   /*add display:flex and set justify-content to space-between*/
   font-weight: 700;
   display: flex;
   justify-content: space-between;
+  align-items: center;
+
 }
 
 .div-1, .div-2, .div-3 {
   /*give the divs a width of 30%, add display:flex, set justify-content and align-items to center*/
   color: #fff;
   line-height: 1.5em;
-  font-size: 1.6em;
-  background-color: #f16059;
-  height: 300px;
+  font-size: 1.25em;
+  padding: 0 1em;
+  background-color: #c5433c;
+  height: 450px;
   display: flex;
-  width: 30%;
+  width: 25%;
   justify-content: center;
   align-items: center;
 }
